# applied_robotics-trackingcam3d_client_ros

./: CMakeLists.txt  README.md  build.sh  package.xml
applied_robotics-libtconfig-7df806401f29/: .gitignore
applied_robotics-libtconfig-7df806401f29/msvc/: libtconfig.vcxproj
applied_robotics-libtlive-1e2c96f504a3/msvc/: libtlive.vcxproj
applied_robotics-libtlive-1e2c96f504a3/src/: CMakeLists.txt  tlive_server.cpp  tlive_stream.cpp
cfg/: ost.txt  trackingcam3d0_left_640.yaml  trackingcam3d0_right_640.yaml  trackingcam3d_client_ros.cfg
cfg/config_local/: trackingcam3d0_left_640.yaml  trackingcam3d0_right_640.yaml
launch/: trackingcam3d_client_ros.launch
rviz/: config.rviz
src/: CMakeLists.txt  convert.cpp  convert_tf.py  face_recognition.py  frame_tf_broadcaster.cpp  laser.py  recognition_object.py  set_param_camera.cpp  test_laser.py
src/laser_scan/: MyDepthToLaserRectDyn.cpp  MyDepthToLaserRectDyn.h  MyDispToLaserRectDyn.cpp  MyDispToLaserRectDyn.h  MyPerformanceMeter.cpp  MyPerformanceMeter.h  laser_scan.cpp
src/main/: CMakeLists.txt  MyDepthIllustrator.cpp  MyDepthIllustrator.h  MyFpsMeter.cpp  RosSCalibConfigurator.h  TrackingCam3d_Client.h  main.cpp
